# converter

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  render.yaml
backend/: .env.example  pyproject.toml  requirements.txt
backend/src/: __init__.py  config.py  main.py
backend/src/api/: __init__.py  routes.py  schemas.py
backend/src/exporter/: __init__.py  docx_exporter.py  html_exporter.py
backend/src/formatter/: __init__.py  code_highlighter.py  page_optimizer.py  template_engine.py
backend/src/graph_handler/: __init__.py  caption_generator.py  graph_extractor.py  graph_storage.py
backend/src/parser/: __init__.py  markdown_extractor.py  notebook_parser.py  python_parser.py
backend/src/utils/: __init__.py  file_handler.py  notebook_fetcher.py  validators.py
backend/templates/: academic_report.html  base.html  technical_doc.html
docs/: api_reference.md  architecture.md  user_guide.md
frontend/: package.json
frontend/src/: index.html
frontend/src/scripts/: app.js
frontend/src/styles/: main.css
tests/: __init__.py  test_exporter.py  test_formatter.py  test_graph_handler.py  test_parser.py
tests/fixtures/: sample_notebook.ipynb
